feat: add pspacemod -d and -v options

--- a/res/vhost-default.conf
+++ b/res/vhost-default.conf
@@ -6,11 +6,16 @@
         # match this virtual host. For the default virtual host (this file) this
         # value is not decisive as it is used as a last resort host regardless.
         # However, you must set it for any further virtual host explicitly.
-        ServerName ${subdomain}
-
+        ServerName ${domain}
         ServerAdmin ${email}
         DocumentRoot ${subdir}
-        <Directory ${subdir}>
+        
+        # php-fpm pool
+        <FilesMatch ".+\.ph(ar|p|tml)$">
+                SetHandler "proxy:unix:/run/php/php7.2-fpm.${domain}.sock|fcgi://localhost"
+        </FilesMatch>
+
+        <Directory ${subdir}/>
                 Options Indexes FollowSymLinks
                 AllowOverride All
                 Require all granted
@@ -22,8 +27,8 @@
         # modules, e.g.
         #LogLevel info ssl:warn
 
-        ErrorLog ${APACHE_LOG_DIR}/${subdomain}_error.log
-        CustomLog ${APACHE_LOG_DIR}/${subdomain}_access.log combined
+        ErrorLog ${subdir}/error.log
+        CustomLog ${subdir}/access.log combined
 
         # For most configuration files from conf-available/, which are
         # enabled or disabled at a global level, it is possible to
