--- a/res/vhost-default.conf
+++ b/res/vhost-default.conf
@@ -29,6 +29,12 @@
 
 	ErrorLog ${subdir}/error.log
 	CustomLog ${subdir}/access.log combined
+	
+	# Deny access to log files
+	<Files ~ "^(error|access).log$">
+		Order allow,deny
+		Deny from all
+	</Files>
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
