fix: mini clean

--- a/res/vhost-files.conf
+++ b/res/vhost-files.conf
@@ -39,8 +39,8 @@
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
 	Include /etc/letsencrypt/options-ssl-apache.conf
-	SSLCertificateFile /etc/letsencrypt/live/files.club1.fr/fullchain.pem
-	SSLCertificateKeyFile /etc/letsencrypt/live/files.club1.fr/privkey.pem
+	SSLCertificateFile /etc/letsencrypt/live/club1.fr/fullchain.pem
+	SSLCertificateKeyFile /etc/letsencrypt/live/club1.fr/privkey.pem
 </VirtualHost>
 </IfModule>
 
