change fpm pool creation to one per user

--- a/res/vhost-default.conf
+++ b/res/vhost-default.conf
@@ -12,7 +12,7 @@
 
 	# php-fpm pool
 	<FilesMatch ".+\.ph(ar|p|tml)$">
-		SetHandler "proxy:unix:/run/php/php7.2-fpm.${domain}.sock|fcgi://localhost"
+		SetHandler "proxy:unix:/run/php/php-fpm.${user}.sock|fcgi://localhost"
 	</FilesMatch>
 
 	<Directory ${subdir}/>
