--- a/res/fpm-pool.conf
+++ b/res/fpm-pool.conf
@@ -1,4 +1,4 @@
-[${domain}]
+[${user}]
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
@@ -16,7 +16,7 @@ group = ${user}
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php/php7.2-fpm.${domain}.sock
+listen = /run/php/php-fpm.${user}.sock
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server. Many
