feat: update-element add confirm and use config and functions

--- a/config.sample.env
+++ b/config.sample.env
@@ -10,3 +10,7 @@ pma_usergroup=low-permission
 email=n.peugnet@free.fr
 phpversion=7.2
 redirect_vhost=zzz-redirect
+
+# Element settings
+element_repo=vector-im/element-web
+element_dir=/var/www/element
