feat: disallow php to open files outside the home

--- a/share/club1/fpm-pool.conf
+++ b/share/club1/fpm-pool.conf
@@ -78,3 +78,6 @@ pm.min_spare_servers = 1
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
 pm.max_spare_servers = 2
+
+; Limit PHP to user's home dir
+php_admin_value[open_basedir] = /home/${user}
