fix: add /tmp to open_basedir

--- a/share/club1/fpm-pool.conf
+++ b/share/club1/fpm-pool.conf
@@ -80,4 +80,4 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 2
 
 ; Limit PHP to user's home dir
-php_admin_value[open_basedir] = /home/${user}
+php_admin_value[open_basedir] = /tmp:/home/${user}
