--- a/share/club1/vhost-default.conf
+++ b/share/club1/vhost-default.conf
@@ -14,14 +14,6 @@
 		Require all granted
 	</Directory>
 
-	ErrorLog ${subdir}/error.log
-	CustomLog ${subdir}/access.log combined
-
-	# Deny access to log files
-	<Files ~ "^(error|access).log$">
-		Order allow,deny
-		Deny from all
-	</Files>
+	ErrorLog /home/${user}/log/${domain}_error.log
+	CustomLog /home/${user}/log/${domain}_access.log combined
 </VirtualHost>
-
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
