--- a/share/club1/nginx-site.conf
+++ b/share/club1/nginx-site.conf
@@ -8,6 +8,7 @@ server {
 	ssl_certificate_key /etc/letsencrypt/live/${domain}/privkey.pem;
 
 	location / {
+		client_max_body_size 50M;
 		include proxy_params;
 		proxy_pass http://127.0.0.1:8080;
 	}
