Add prometheus-phpfpm-exporter conf to templates and lib

--- a/share/club1/fpm-pool.conf
+++ b/share/club1/fpm-pool.conf
@@ -81,3 +81,10 @@ pm.max_spare_servers = 2
 
 ; Limit PHP to user's home dir
 php_admin_value[open_basedir] = /tmp:/home/${user}
+
+; The address on which to accept FastCGI status request. This creates a new
+; invisible pool that can handle requests independently. This is useful
+; if the main pool is busy with long running requests because it is still possible
+; to get the status before finishing the long running requests.
+pm.status_listen = /run/phpfpm/${user}.sock
+pm.status_path = /status
