feat: add bad user-agent blocking to new nginx sites

--- a/share/club1/nginx-site.conf
+++ b/share/club1/nginx-site.conf
@@ -7,6 +7,8 @@ server {
 	ssl_certificate /etc/letsencrypt/live/${domain}/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/${domain}/privkey.pem;
 
+	include block_badagents;
+
 	location / {
 		client_max_body_size 50M;
 		include proxy_params;
